k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dimensionador-k8s
  labels:
    app.kubernetes.io/name: dimensionador-k8s
    app.kubernetes.io/part-of: dimensionador-k8s
