k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dimensionador-k8s
  labels:
    app.kubernetes.io/name: dimensionador-k8s
    app.kubernetes.io/part-of: dimensionador-k8s
spec:
  selector:
    app.kubernetes.io/name: dimensionador-k8s
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
